--- a/aeropuerto/pom.xml
+++ b/aeropuerto/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.unimagdalena</groupId>
-    <artifactId>aeropuerto</artifactId>
+    <artifactId>aeropuertotest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>aeropuerto</name>
-    <description>aeropuerto</description>
+    <name>aeropuertotest</name>
+    <description>aeropuertotest</description>
     <url/>
     <licenses>
         <license/>
@@ -58,6 +58,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
